# sombrero

./: CMakeLists.txt  README.md
src/: sombrero.cpp  sombrero.hpp
src/audio/: audio.hpp  network.hpp
src/backends/: nmcli.hpp  wpctl.hpp
src/exec/: exec.hpp
testing/: main.cpp
